tdf#117437 - Console error message about ShowInlineTooltips

Change-Id: I6959a645da1df9e956aecc8d923cfd6a9e0b7089